fix: PrimeNG password input width alignment

--- a/frontend/kudos-angular/src/styles.scss
+++ b/frontend/kudos-angular/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+.p-password {
+  width: 100%;
+  
+  input {
+    width: 100%;
+  }
+}
